# Satin

./: README.md
app/: Cargo.toml
app/satin/src-tauri/capabilities/: default.json
data-generator/: .gitignore  Cargo.toml
data-generator/src/: cli.rs  generator.rs  main.rs
satin/: Cargo.toml  package.json
satin-types/: Cargo.toml
satin-types/src/: lib.rs
satin-types/src/types/: description.rs  mod.rs  recipe.rs  research.rs  uestring.rs  utility.rs
satin/src/: App.tsx  main.tsx
satin/src-tauri/: Cargo.toml  tauri.conf.json
satin/src-tauri/capabilities/: default.json
satin/src-tauri/src/: commands.rs  lib.rs  main.rs
satin/src/contexts/config/: index.ts  provider.tsx  type.ts
satin/src/contexts/database/: index.ts  provider.tsx  types.ts
satin/src/contexts/readyState/: index.ts  provider.tsx  type.ts
satin/src/lang/: en.json
satin/src/modals/: createFactory.tsx  createProject.tsx  index.ts
satin/src/styles/: index.scss
satin/src/styles/modals/: create_factory.scss  modals.scss
satin/src/styles/views/: blank.scss  layout.scss  views.scss
satin/src/types/: factory.ts  project.ts
satin/src/types/backend/: database.ts  specta.ts
satin/src/util/: localization.tsx  routes.tsx  satisfactoryMappings.ts  theme.ts
satin/src/views/blank/: Blank.tsx
satin/src/views/factory/: FactoryPage.tsx
satin/src/views/layout/: Layout.tsx
utils/: Cargo.toml
utils/data-generator/: .gitignore
utils/data-generator/src/: cli.rs  main.rs
utils/satin-types/: Cargo.toml
utils/satin-types/src/: lib.rs
utils/satin-types/src/types/: building.rs  description.rs  mod.rs  research.rs  uestring.rs  utility.rs
